# Hospital-Readmission-Predictor

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
micro-data-center-ai-health-portfolio/01_healthcare_ai/005_emergency-department-triage-ai/: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  project_metadata.json  pyproject.toml
micro-data-center-ai-health-portfolio/01_healthcare_ai/005_emergency-department-triage-ai/docs/: architecture.md  commercial_offer.md  committee_review.md  compliance.md  deployment.md  methodology.md  monitoring.md  operations_runbook.md  production_checklist.md  security.md
micro-data-center-ai-health-portfolio/01_healthcare_ai/005_emergency-department-triage-ai/reports/: data_dictionary.md  model_card.md  risk_analysis.md  validation_report.md
micro-data-center-ai-health-portfolio/01_healthcare_ai/005_emergency-department-triage-ai/src/: __init__.py  config.py
micro-data-center-ai-health-portfolio/01_healthcare_ai/005_emergency-department-triage-ai/tests/: test_api.py
micro-data-center-ai-health-portfolio/02_clinical_data_science/012_synthetic-ehr-data-generator/: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  project_metadata.json  pyproject.toml
micro-data-center-ai-health-portfolio/02_clinical_data_science/012_synthetic-ehr-data-generator/docs/: architecture.md  commercial_offer.md  committee_review.md  compliance.md  deployment.md  methodology.md  monitoring.md  operations_runbook.md  production_checklist.md  security.md
micro-data-center-ai-health-portfolio/02_clinical_data_science/012_synthetic-ehr-data-generator/reports/: data_dictionary.md  model_card.md  risk_analysis.md  validation_report.md
micro-data-center-ai-health-portfolio/02_clinical_data_science/012_synthetic-ehr-data-generator/src/: __init__.py  config.py
micro-data-center-ai-health-portfolio/02_clinical_data_science/012_synthetic-ehr-data-generator/tests/: test_api.py
micro-data-center-ai-health-portfolio/05_crystallography_hpc/047_molecular-simulation-workflow-manager/: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  project_metadata.json  pyproject.toml
micro-data-center-ai-health-portfolio/05_crystallography_hpc/047_molecular-simulation-workflow-manager/docs/: architecture.md  commercial_offer.md  committee_review.md  compliance.md  deployment.md  methodology.md  monitoring.md  operations_runbook.md  production_checklist.md  security.md
micro-data-center-ai-health-portfolio/05_crystallography_hpc/047_molecular-simulation-workflow-manager/reports/: data_dictionary.md  model_card.md  risk_analysis.md  validation_report.md
micro-data-center-ai-health-portfolio/05_crystallography_hpc/047_molecular-simulation-workflow-manager/src/: __init__.py  config.py
micro-data-center-ai-health-portfolio/05_crystallography_hpc/047_molecular-simulation-workflow-manager/tests/: test_api.py
micro-data-center-ai-health-portfolio/07_micro_datacenter_operations/063_energy-consumption-forecasting-ai/: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  project_metadata.json  pyproject.toml
micro-data-center-ai-health-portfolio/07_micro_datacenter_operations/063_energy-consumption-forecasting-ai/docs/: architecture.md  commercial_offer.md  committee_review.md  compliance.md  deployment.md  methodology.md  monitoring.md  operations_runbook.md  production_checklist.md  security.md
micro-data-center-ai-health-portfolio/07_micro_datacenter_operations/063_energy-consumption-forecasting-ai/reports/: data_dictionary.md  (+3 more)
micro-data-center-ai-health-portfolio/08_cybersecurity_defensive/079_healthcare-data-privacy-scanner/: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  project_metadata.json  pyproject.toml
micro-data-center-ai-health-portfolio/09_mlops_devsecops/086_secure-ml-api-deployment-template/: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  project_metadata.json  pyproject.toml
micro-data-center-ai-health-portfolio/10_business_intelligence/097_laboratory-equipment-utilization-dashboard/: .env.example  CONTRIBUTING.md  README.md  SECURITY.md  project_metadata.json  pyproject.toml
(+2460 files in other folders)
